<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextHomeAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextWorkAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:ems="10"
        android:hint="@string/work_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHomeAddress" />

    <EditText
        android:id="@+id/editTextTimeToArriveWork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="126dp"
        android:layout_marginRight="126dp"
        android:ems="10"
        android:hint="@string/time_to_get_to_work"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextWorkAddress" />

    <EditText
        android:id="@+id/editTextTimeToGetReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="127dp"
        android:layout_marginRight="127dp"
        android:ems="10"
        android:hint="@string/time_to_get_ready"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeToArriveWork" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTimeToGetReady" />

</android.support.constraint.ConstraintLayout>